--- a/package.json
+++ b/package.json
@@ -1,24 +1,33 @@
 {
-  "name": "genshin-flow",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.4"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.4"
-  }
+	"name": "genshin-flow",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"prepare": "panda codegen",
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@tanstack/react-query": "^5.50.1",
+		"next": "14.2.4",
+		"react": "^18",
+		"react-dom": "^18",
+		"zustand": "^4.5.4"
+	},
+	"devDependencies": {
+		"@pandacss/dev": "^0.42.0",
+		"@tanstack/eslint-plugin-query": "^5.50.1",
+		"@types/node": "^20",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"@typescript-eslint/parser": "^7.16.0",
+		"eslint": "^8",
+		"eslint-config-naver": "^2.1.0",
+		"eslint-config-next": "14.2.4",
+		"eslint-config-prettier": "^9.1.0",
+		"prettier": "^3.3.2",
+		"typescript": "~5.5.0"
+	}
 }
