--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@ducanh2912/next-pwa": "^10.2.8",
 		"@tanstack/react-query": "^5.50.1",
 		"next": "14.2.4",
+		"next-compose-plugins": "^2.2.1",
+		"next-pwa": "^5.6.0",
 		"react": "^18",
 		"react-dom": "^18",
 		"zustand": "^4.5.4"
