--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"dependencies": {
 		"@ducanh2912/next-pwa": "^10.2.8",
 		"@tanstack/react-query": "^5.50.1",
+		"nanoid": "^5.0.7",
 		"next": "14.2.4",
 		"next-compose-plugins": "^2.2.1",
 		"next-pwa": "^5.6.0",
