--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
 	"dependencies": {
 		"@ducanh2912/next-pwa": "^10.2.8",
 		"@tanstack/react-query": "^5.50.1",
+		"@types/react-responsive": "^8.0.8",
+		"cookies-next": "^4.2.1",
 		"nanoid": "^5.0.7",
 		"next": "14.2.4",
+		"next-auth": "^4.24.7",
 		"next-compose-plugins": "^2.2.1",
 		"next-pwa": "^5.6.0",
 		"react": "^18",
 		"react-dom": "^18",
+		"react-responsive": "^10.0.0",
 		"zustand": "^4.5.4"
 	},
 	"devDependencies": {
