--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint"
+		"lint": "next lint",
+		"analyzer": "cross-env ANALYZE=true NODE_ENV=production next build"
 	},
 	"dependencies": {
 		"@ducanh2912/next-pwa": "^10.2.8",
@@ -25,12 +26,14 @@
 		"zustand": "^4.5.4"
 	},
 	"devDependencies": {
+		"@next/bundle-analyzer": "^14.2.8",
 		"@pandacss/dev": "^0.42.0",
 		"@tanstack/eslint-plugin-query": "^5.50.1",
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
 		"@typescript-eslint/parser": "^7.16.0",
+		"cross-env": "^7.0.3",
 		"eslint": "^8",
 		"eslint-config-naver": "^2.1.0",
 		"eslint-config-next": "14.2.4",
