--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"next-compose-plugins": "^2.2.1",
 		"next-pwa": "^5.6.0",
 		"react": "^18",
+		"react-cookie": "^7.2.0",
 		"react-dom": "^18",
 		"react-responsive": "^10.0.0",
 		"zustand": "^4.5.4"
