fix/미들웨어 url 제거

--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
-developMode = production
+developMode=production
 
 # oauth Id
 
@@ -12,5 +12,5 @@ login=""
 checkAuthCode= ""
 
 # api 경로 base URL
-NEXT_PUBLIC_BaseApi=""
+NEXT_PUBLIC_BaseApi="https://genshinflow.vercel.app"
 
